[gd_scene load_steps=13 format=2]

[ext_resource path="res://script/index.gd" type="Script" id=1]
[ext_resource path="res://img/boton_1jugador.png" type="Texture" id=2]
[ext_resource path="res://img/boton_tienda.png" type="Texture" id=3]
[ext_resource path="res://img/boton_2jugadores.png" type="Texture" id=4]
[ext_resource path="res://img/boton_salir.png" type="Texture" id=5]
[ext_resource path="res://img/token.png" type="Texture" id=6]
[ext_resource path="res://fonts/Jaro-Regular-VariableFont_opsz.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://img/fondo_index.png" type="Texture" id=8]
[ext_resource path="res://song/sonidotfg.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 120
font_data = ExtResource( 7 )

[node name="Nodo" type="Node2D"]
script = ExtResource( 1 )

[node name="fondo_index" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 1.16, 1.12 )
texture = ExtResource( 8 )

[node name="play" type="TouchScreenButton" parent="."]
position = Vector2( 448, 208 )
scale = Vector2( 0.490158, 0.478088 )
normal = ExtResource( 2 )

[node name="play2" type="TouchScreenButton" parent="."]
position = Vector2( 440, 328 )
scale = Vector2( 0.50996, 0.50996 )
normal = ExtResource( 4 )

[node name="tienda" type="TouchScreenButton" parent="."]
position = Vector2( 440, 456 )
scale = Vector2( 0.50996, 0.50996 )
normal = ExtResource( 3 )

[node name="salir" type="TouchScreenButton" parent="."]
position = Vector2( 488, 584 )
scale = Vector2( 0.38247, 0.38247 )
normal = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1184, 80 )
texture = ExtResource( 6 )

[node name="token_t" type="Label" parent="."]
margin_left = 896.0
margin_top = 40.0
margin_right = 1023.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 1 )
text = "Tokens:"

[node name="c_token" type="Label" parent="."]
margin_left = 1032.0
margin_top = 40.0
margin_right = 1079.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 2 )

[node name="logo" type="Label" parent="."]
margin_left = 400.0
margin_top = 48.0
margin_right = 888.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.494118, 1, 0, 1 )
text = "SIDE JUMP"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="sonido_index" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="play2" to="." method="_on_play2_pressed"]
[connection signal="pressed" from="tienda" to="." method="_on_tienda_pressed"]
[connection signal="pressed" from="salir" to="." method="_on_salir_pressed"]
